workshop/minio.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
  namespace: kubeflow
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
spec:

  to:
    kind: Service
    name: minio-service
    weight: 100
  port:
    targetPort: http
