workshop/mlpipeline-ui.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
  labels:
    app: ml-pipeline-ui
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
spec:
  to:
    kind: Service
    name: ml-pipeline-ui
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
